--- a/assets/index-DOgJ4YtO.css
+++ b/assets/index-DOgJ4YtO.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";@import"https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap";*{margin:0;padding:0;box-sizing:border-box}div#root body{background-color:#f0f8ff;font-family:Cairo,sans-serif;font-optical-sizing:auto;font-weight:500;font-style:normal;font-variation-settings:"slnt" 0;list-style:none}/*!
+@charset "UTF-8";@import"https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap";*{margin:0;padding:0;box-sizing:border-box}div#root{background-color:#f0f8ff;font-family:Cairo,sans-serif;font-optical-sizing:auto;font-weight:500;font-style:normal;font-variation-settings:"slnt" 0;list-style:none}/*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
